# C-CodingProjects

./: README.md
AVL Trees/Gator AVL Project/: Report.docx
AVL Trees/Gator AVL Project 1 - Check In/: AllWorkingTestCases.txt  NoWorkingTestCases.txt  Project1_Checkin_BlakeMcGahee.docx  avl_tree.cpp  avl_tree.h  test.cpp
AVL Trees/Gator AVL Project/Original/: avl_tree.cpp  avl_tree.h  test.cpp
AVL Trees/Gator AVL Project/P1-Catch-Template-main/P1-Catch-Template-main/: CMakeLists.txt
AVL Trees/Gator AVL Project/P1-Catch-Template-main/P1-Catch-Template-main/src/: avl_tree.cpp  avl_tree.h  main.cpp
AVL Trees/Gator AVL Project/P1-Catch-Template-main/P1-Catch-Template-main/test/: test.cpp
Comparing Search Algorithms/: The Searchers Project 3b - Group Feedback.docx  blakemcgahee.txt
Comparing Search Algorithms/Project 3 Final/the-searchers-final-project/: CMakeLists.txt  README.md
Comparing Search Algorithms/Project 3 Final/the-searchers-final-project/data/: data_mixed_invalid.txt
Comparing Search Algorithms/Project 3 Final/the-searchers-final-project/scripts/: data_100k_random.py  data_100k_sorted_desc.py  data_100k_sparse.py
Comparing Search Algorithms/Project 3 Final/the-searchers-final-project/src/: ProjectUtils.h  main.cpp
Comparing Search Algorithms/Project 3/data/: data_100k_random.txt  data_100k_sparse.txt  data_large_duplicates.txt  data_negative_numbers.txt  data_small_invalid.txt  testing.txt
Comparing Search Algorithms/Project 3/scripts/: data_100k_large_duplicates.py  data_100k_sorted_asc.py  data_negative_numbers.py
Comparing Search Algorithms/Project 3/src/: ProjectUtils.h  main.cpp
Image Processing/: Project 2 - Image Processing.sln
Image Processing/ImageProcessing/: makefile  project2.out
Image Processing/ImageProcessing/src/: image.cpp  image.h  main.cpp
Image Processing/Project 2 - Image Processing/: Project 2 - Image Processing.vcxproj
Linked List/: Header1.h  LinkedList1.h  LinkedList3.h  LinkedList4.h  Project 1 Linked List.sln
Linked List/Project 1 Linked List/: Project 1 Linked List.vcxproj
Minesweeper/: Board.cpp  Board.h  Project 3 - Minesweeper.cpp  Project 3 - Minesweeper.sln  Project 3 - Minesweeper.vcxproj  Project 3 - Minesweeper.vcxproj.filters  Tile.cpp  Tile.h  main.cpp
Minesweeper/x64/Release/: Project 3 - Minesweeper.exe.recipe  Project 3 - Minesweeper.iobj  Project 3 - Minesweeper.ipdb  Project 3 - Minesweeper.vcxproj.FileListAbsolute.txt
Minesweeper/x64/Release/Project .2cbbb163.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project 3 - Minesweeper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
Simplified PageRank Algorithm/Project 2/: Project 2 Simplified PageRank Algorithm.docx  Report.docx
Simplified PageRank Algorithm/Project 2 Check In/: CMakeLists.txt
Simplified PageRank Algorithm/Project 2 Check In/src/: AdjacencyList.cpp  AdjacencyList.h  main.cpp  program.cpp  program.h
Simplified PageRank Algorithm/Project 2 Check In/test/: test.cpp
